# struvolpy_pkg

./: .gitignore  CMakeLists.txt  README.md  mkdocs.yml  setup.cfg
.github/workflows/: run_test.yml
docs/: api.md
site/: 404.html  index.html  objects.inv
site/api/: index.html
site/explanation/: index.html
site/how-to-guides/: index.html
site/reference/: index.html
site/tutorials/: index.html
struvolpy/: Structure.py  Volume.py  __init__.py
test_data/: 3407_reduced.mrc
tests/: constants.py  test_structure.py  test_volume.py
