# Setup configuration for the package
[metadata]
name = "struvolpy"
version = "1.0.0"
author = "Luc Elliott"
author_email = "hllelli2@liverpool.ac.uk"
description = "A python package for parsing atomic coordinates files (pdb, mmcif) and mrc files"
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/hllelli2/struvolpy_pkg/"
license = "GPLv3"
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

# Options for the package
[options]
packages = find:
python_requires = >=3.7
install_requires = 
    biotempy
    numpy
    gemmi==0.6.2
    mrcfile

[options.packages.find]
exclude =
    tests
    .github
    .gitignore
    .gitattributes
    .git
    .vscode
    .history
    .logo.png

