# Setup configuration for the package
[metadata]
name = struvolpy
version = 1.0.0
author = Luc Elliott
author_email = hllelli2@liverpool.ac.uk
description = "A python package for parsing atomic coordinates files (pdb, mmcif) and density files (map, mrc, ccp4)"
long_description = file: ./README.md
long_description_content_type = text/markdown
url = https://github.com/hllelli2/struvolpy/
license = "GPLv3"
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

# Options for the package
[options]
packages = find:
python_requires = >=3.7
install_requires = 
    numpy
    mrcfile
    gemmi
    biotempy==2.1.0a0
    

[options.packages.find]
exclude =
    tests
    .github
    .gitignore
    .gitattributes
    .git
    .vscode
    .history
    .logo.png
    *.egg
    *.egg-info
    


